@@ -1,3 +1,12 @@
+2010-02-01  Patrick Gansterer  <paroga@paroga.com>
+
+        Reviewed by Darin Adler.
+
+        [Qt] WinCE buildfix after r52729 and fix for Q_BIG_ENDIAN typo.
+        https://bugs.webkit.org/show_bug.cgi?id=34378
+
+        * wtf/Platform.h:
+
 2010-02-01  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Gavin Barraclough.
